--- a/MaisApoio.Web/Html/index.html
+++ b/MaisApoio.Web/Html/index.html
@@ -8,7 +8,39 @@
 
 <body>
     <div class="corpo">
-        <div class="top-bar"></div>
+        <div class="top-bar">
+            <div class="opcoes">
+                <div class="corda1"></div>
+                <div class="corda2"></div>
+                <div class="opcao-principal">
+                    <p class="texto-login">
+                        Area do Login
+                    </p>
+                </div>
+                <div class="opcao-usuario">
+                    <div class="opcao">
+                        <p class="texto-opcao">
+                            Beneficiário
+                        </p>
+                    </div>
+                    <div class="opcao">
+                        <p class="texto-opcao">
+                            Voluntário
+                        </p>
+                    </div>
+                    <div class="opcao">
+                        <p class="texto-opcao">
+                            Empreendedor
+                        </p>
+                    </div>
+                    <div class="opcao">
+                        <p class="texto-opcao">
+                            Doador
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="conteudo">
             <div class="fundo">
             <div class="bloco-1">
