--- a/mais-apoio/public/index.html
+++ b/mais-apoio/public/index.html
@@ -10,7 +10,7 @@
     content="O Sistema +Apoio é uma plataforma desenvolvida por estudantes de Ciências da Computação para conectar pessoas em situação de vulnerabilidade a oportunidades essenciais. Nossa missão é promover solidariedade e colaboração, criando impacto positivo nas comunidades." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>+MaisApoio</title>
+  <title>+Apoio</title>
 </head>
 
 <body>
