--- a/mais-apoio/public/index.html
+++ b/mais-apoio/public/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,68 +7,21 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="O Sistema +Apoio é uma plataforma desenvolvida por estudantes de Ciências da Computação para conectar pessoas em situação de vulnerabilidade a oportunidades essenciais. Nossa missão é promover solidariedade e colaboração, criando impacto positivo nas comunidades."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>+Apoio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>O JavaScript é obrigatório em nossa aplicação.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      Este arquivo HTML é um template.
+      Se você abri-lo diretamente no navegador, verá uma página em branco.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      Para iniciar o desenvolvimento, execute `npm start` ou `yarn start`.
+      Para criar um pacote de produção, use `npm run build` ou `yarn build`.
     -->
   </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description"
-    content="O Sistema +Apoio é uma plataforma desenvolvida por estudantes de Ciências da Computação para conectar pessoas em situação de vulnerabilidade a oportunidades essenciais. Nossa missão é promover solidariedade e colaboração, criando impacto positivo nas comunidades." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>+Apoio</title>
-</head>
-
-<body>
-  <noscript>O JavaScript é obrigatório em nossa aplicação.</noscript>
-  <div id="root"></div>
-</body>
-
-<<<<<<< HEAD
-</html>
-=======
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
-</html>
->>>>>>> 446259f3b0b8deb5f2d75cc0ec93e0e98929605e
->>>>>>> 610c392466e00472c751550313a000adeb7b6abb
